--- a/style.css
+++ b/style.css
@@ -3,3 +3,233 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body {
+    overflow-x: hidden;
+}
+
+header {
+    /* background-color: #4239c8; */
+    height: max-content;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    padding: 0rem 10rem;
+
+}
+
+header img {
+    width: 1rem;
+    height: 1rem;
+}
+
+.signs {
+    display: flex;
+    gap: 0rem;
+
+}
+
+.triangle {
+    width: max-content;
+    border-right: 0.8rem solid transparent;
+    border-left: 0.8rem solid transparent;
+    border-bottom: 1rem solid white;
+    /* border-radius: 4px; */
+    position: relative;
+}
+
+.triangle p {
+    border-right: 0.55rem solid transparent;
+    border-left: 0.55rem solid transparent;
+    border-bottom: 0.73rem solid #4239c8;
+    /* border-radius: 4px; */
+    position: absolute;
+    top: 2px;
+    right: -9px;
+}
+
+.head a {
+    color: white;
+    text-decoration: none;
+    font-size: 0.8rem;
+}
+
+.hello a {
+    color: white;
+    font-size: 1rem;
+}
+
+.head {
+    display: flex;
+    justify-content: space-between;
+    height: max-content;
+    padding: 2rem 0rem;
+
+
+
+
+
+}
+
+.email,
+.navlinks {
+    display: inline-block;
+    display: flex;
+    gap: 1.5rem;
+}
+
+.hello {
+    margin-top: 4rem;
+    flex-direction: column;
+    gap: 2rem;
+    display: flex;
+
+}
+
+header h1 {
+    color: #0aa0d0;
+    font-size: 4rem;
+}
+
+.hello p {
+    /* color: #0aa0d0; */
+    width: 85%;
+    font-size: 1.5rem;
+    line-height: 2.5rem;
+}
+
+.background {
+    width: 90rem;
+    background-color: #4239c8;
+    height: 35rem;
+    position: absolute;
+    z-index: -1;
+    transform: rotate(-5deg);
+    top: -4rem;
+    left: -2rem;
+
+}
+
+#work {
+    margin-top: 8rem;
+    padding: 0rem 10rem;
+
+
+}
+
+.my h2 {
+    margin: auto;
+
+    width: max-content;
+    font-weight: 400;
+    font-size: 1rem;
+
+}
+
+.my p {
+    width: 2rem;
+    height: 3px;
+    background-color: #2aabe2;
+    margin: auto;
+    margin-top: 0.5rem;
+
+}
+
+.ff,
+.personal {
+    margin-top: 3rem;
+    padding: 3rem 0rem;
+    font-size: 1.5rem;
+    color: #777777;
+}
+
+.lyft {
+    height: 30rem;
+    padding: 1rem;
+    display: flex;
+    justify-content: space-between;
+}
+
+.left p:first-child {
+    color: #2aabe2;
+    font-size: 1.5rem;
+}
+
+.left p:nth-child(2),
+.mall p:not(p:last-child) {
+    color: #777777;
+    font-size: 1.2rem;
+    line-height: 2rem;
+
+}
+
+.left p:last-child {
+    color: #777777;
+    font-style: italic;
+    border-top: 1px solid #cccccc;
+}
+
+.left {
+    width: 45%;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.lyft img {
+    width: 52%;
+    height: 90%;
+}
+
+.apple p:nth-child(2),
+.mall p:not(p:last-child) {
+    color: #2aabe2;
+}
+
+.mallDesign {
+    gap: 0.1rem;
+}
+
+.mallDesign a {
+    text-decoration: none;
+    color: #2aabe2;
+    font-size: 1.2rem;
+    border-bottom: 1px solid #adc0c9;
+    width: max-content;
+    margin: 0.5rem 0rem;
+}
+
+.mallDesign a:hover {
+    border-bottom: 1px solid#2aabe2;
+
+}
+
+.mall img {
+    transition: all 0.3s ease-in-out;
+    position: relative;
+    top: 0;
+}
+
+.mall img:hover {
+    cursor: pointer;
+    box-shadow: 0 10px 9px -5px gray;
+    position: relative;
+    top: -0.5rem;
+    transition: all 0.3s ease-in-out;
+
+}
+
+.pics img {
+    width: 90%;
+    height: 90%;
+}
+
+.pics {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 0rem;
+}
+
+/* research #777777 */
+/* border #cccccc */
+/* lyft color #2aabe2 */
