--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@
 
 body {
     overflow-x: hidden;
+
+    height: max-content;
 }
 
 header {
@@ -112,26 +114,30 @@ header h1 {
 
 #work {
     margin-top: 8rem;
-    padding: 0rem 10rem;
+    /* padding: 0rem 10rem; */
 
 
 }
 
+.feature {
+    padding: 0rem 10rem;
+}
+
 .my h2 {
     margin: auto;
-
     width: max-content;
     font-weight: 400;
     font-size: 1rem;
 
 }
 
-.my p {
+.my p,
+p.line {
     width: 2rem;
     height: 3px;
     background-color: #2aabe2;
     margin: auto;
-    margin-top: 0.5rem;
+    margin-top: 1rem;
 
 }
 
@@ -141,6 +147,11 @@ header h1 {
     padding: 3rem 0rem;
     font-size: 1.5rem;
     color: #777777;
+    padding: 0rem 10rem;
+}
+
+.personal {
+    padding: 0;
 }
 
 .lyft {
@@ -190,7 +201,8 @@ header h1 {
     gap: 0.1rem;
 }
 
-.mallDesign a {
+.mallDesign a,
+.links a {
     text-decoration: none;
     color: #2aabe2;
     font-size: 1.2rem;
@@ -199,7 +211,8 @@ header h1 {
     margin: 0.5rem 0rem;
 }
 
-.mallDesign a:hover {
+.mallDesign a:hover,
+.links a:hover {
     border-bottom: 1px solid#2aabe2;
 
 }
@@ -228,6 +241,161 @@ header h1 {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 0rem;
+}
+
+.icons {
+    background-color: #29abe2;
+    padding: 0rem 10rem;
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: space-between;
+    height: 8rem;
+    margin-bottom: 3rem;
+}
+
+.icons img {
+    width: 8%;
+    height: 30%;
+    opacity: 0.5;
+
+}
+
+#about .lyft {
+    padding: 0rem 10rem;
+    margin-top: 3rem;
+}
+
+.thick p:nth-child(2),
+.thick p:nth-child(3) {
+    line-height: 1.4rem;
+    margin-top: 1rem;
+    color: #777777;
+    font-size: 1.3rem;
+}
+
+
+.thick p:last-child,
+.thick p:nth-child(4),
+.thick p:nth-child(5),
+.thick p:nth-child(6),
+.thick p:nth-child(7) {
+    color: black;
+    border: none;
+    font-style: normal;
+    font-size: 1.2rem;
+    opacity: 0.8;
+}
+
+.thick p:nth-child(4) {
+    margin-top: 1rem;
+}
+
+
+.clock,
+.footerinClock {
+    margin-top: 4rem;
+    color: white;
+    background-color: #4d4d4d;
+    height: max-content;
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+    padding-bottom: 2rem;
+
+}
+
+.clock p:not(p.line) {
+    width: max-content;
+    margin: auto;
+
+
+}
+
+.footerinClock {
+    font-size: 2rem;
+}
+
+#contact {
+    margin-top: 3rem;
+
+}
+
+.links a {
+    display: block;
+
+}
+
+.links {
+    width: max-content;
+    margin: auto;
+    margin-top: 2rem;
+}
+
+.mediumblogs,
+.twitter {
+    width: 31rem;
+    padding: 1.5rem;
+    height: 15rem;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    color: #0aa0d0;
+}
+
+.pagefooter .links {
+    margin: 0;
+}
+
+.pagefooter {
+    padding: 0rem 10rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-top: 5rem;
+    overflow: hidden;
+    position: relative;
+    height: 82vh;
+    padding-top: 12rem;
+
+
+}
+
+.mediumTwitter {
+    flex-direction: row;
+    display: flex;
+    gap: 2rem;
+}
+
+.mediumblogs p {
+    color: black;
+    font-size: 1.5rem;
+    opacity: 0.7;
+}
+
+.twitter a {
+    margin-top: 1rem;
+}
+
+#contact .background2 {
+    background-color: #2aabe2;
+    width: 90rem;
+    height: 35rem;
+    position: absolute;
+    z-index: -1;
+    transform: rotate(-5deg);
+    left: -2rem;
+    bottom: -5rem;
+
+    /* top: 0; */
+}
+
+.last {
+    width: max-content;
+    margin: auto;
+    color: white;
+    margin-top: 3rem;
 }
 
 /* research #777777 */
