--- a/style.css
+++ b/style.css
@@ -192,6 +192,10 @@ p.line {
     height: 90%;
 }
 
+.lyft:nth-of-type(3) img {
+    width: 90%;
+}
+
 .apple p:nth-child(2),
 .mall p:not(p:last-child) {
     color: #2aabe2;
@@ -274,6 +278,9 @@ p.line {
     font-size: 1.3rem;
 }
 
+.thick p:first-child {
+    color: #777777
+}
 
 .thick p:last-child,
 .thick p:nth-child(4),
