--- a/mall.css
+++ b/mall.css
@@ -9,12 +9,13 @@
     height: max-content;
     color: white;
     display: flex;
-    padding: 2rem 10rem;
+    padding: 1.5rem 10rem;
     position: fixed;
     gap: 45rem;
     background-color: rgba(255, 255, 255, 0.8);
     width: 100vw;
     z-index: 2;
+    border-bottom: 0.5px solid rgba(0, 0, 0, 0.2);
 
 }
 
@@ -76,7 +77,7 @@
 
 .ourclient {
     color: rgba(0, 0, 0, 0.6);
-    width: 63%;
+    width: 55rem;
     margin: 12rem 0rem 17rem 10rem;
     font-size: 2rem;
     line-height: 2.7rem;
@@ -286,8 +287,12 @@ section.reviewstoreimg {
 
 .contribution p {
     margin-left: 11rem;
-    font-size: 1.2rem;
+    font-size: 0.9rem;
     line-height: 2rem;
+}
+
+.contribution a {
+    font-size: 0.8rem;
 }
 
 .coded {
