--- a/kine.css
+++ b/kine.css
@@ -1,6 +1,10 @@
 .background {
-    background-color: #fffa9f;
+    background-color: white;
 
+}
+
+header {
+    background-color: #fffa9f;
 }
 
 section.info {
