--- a/mall.css
+++ b/mall.css
@@ -5,20 +5,31 @@
 }
 
 .head {
-    /* background-color: #4239c8; */
-    height: max-content;
-    color: white;
+    margin: auto;
+    padding: 0rem 10rem;
     display: flex;
-    padding: 1.5rem 10rem;
-    position: fixed;
-    gap: 45rem;
-    background-color: rgba(255, 255, 255, 0.8);
-    width: 100vw;
-    z-index: 2;
-    border-bottom: 0.5px solid rgba(0, 0, 0, 0.2);
-
+    justify-content: space-between;
+    align-items: center;
+    height: 4rem;
+    width: 88rem;
 }
 
+.posi {
+    position: fixed;
+    height: 4rem;
+    z-index: 2;
+    background-color: rgba(255, 255, 255, 0.8);
+    width: 100vw;
+    border-bottom: .5px solid rgba(0, 0, 0, 0.2);
+}
+
+.wrappeer {
+    color: white;
+}
+
+body {
+    width: 100%;
+}
 
 
 .navlinks a {
@@ -28,7 +39,6 @@
 .head img {
     width: 1rem;
     height: 1rem;
-    /* display: block; */
 }
 
 .signs a {
@@ -47,15 +57,8 @@
 
 }
 
-.background {
-    width: 94rem;
+header {
     background-color: #ffd7d0;
-    height: 25rem;
-    position: absolute;
-    z-index: -1;
-    transform: rotate(-5deg);
-    top: -4rem;
-    left: -2rem;
 
 }
 
@@ -89,7 +92,7 @@ section.info {
     padding: 0rem 10rem;
     position: relative;
     margin-bottom: 5rem;
-    width: 89rem;
+    width: 100%;
 
 }
 
@@ -175,7 +178,7 @@ ul li {
 section.reviewstoreimg {
     background-color: #f4f4f4;
     padding: 4rem 0rem;
-    width: 89rem;
+    width: 100%;
 }
 
 .empty img {
@@ -235,7 +238,7 @@ section.reviewstoreimg {
 
 .redesignsect {
     background-color: #ffd7d0;
-    width: 89rem;
+    width: 100vw;
 }
 
 .map h1 {
