--- a/style.css
+++ b/style.css
@@ -16,9 +16,7 @@ html {
 
 body {
     overflow-x: hidden;
-    /* width: 10%; */
     height: max-content;
-    /* margin: auto; */
 
 }
 
@@ -35,20 +33,11 @@ header {
 
 }
 
-/* header::after { */
-/* content: ''; */
-/* background-color: white; */
-/* position: absolute; */
-/* bottom: 0; */
-/* right: 0; */
-/* border-width: 100px 0 0 1400px; */
-/* border-color: transparent transparent transparent white; */
-/* } */
+
 
 .background {
     position: absolute;
     border-width: 100px 100vw 0px 0px;
-    /* top left bottom right*/
     bottom: 0;
     right: 0;
     border-color: transparent white transparent transparent;
@@ -134,23 +123,11 @@ header h1 {
     line-height: 2.5rem;
 }
 
-/* 
-.background {
-    width: 11 0%;
-    background-color: #4239c8;
-    height: 35rem;
-    position: absolute;
-    z-index: -1;
-    transform: rotate(-5deg);
-    top: -4rem;
-    left: -2rem;
 
-} */
 
 
 #work {
     margin-top: 8rem;
-    /* padding: 0rem 10rem; */
 
 
 }
@@ -353,6 +330,10 @@ p.line {
 
 }
 
+.clock {
+    margin-top: 10rem;
+}
+
 .clock p:not(p.line) {
     width: max-content;
     margin: auto;
@@ -397,23 +378,24 @@ p.line {
 }
 
 .pagefooter {
-    padding: 0rem 10rem;
+    padding: 10rem 10rem 2rem;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     margin-top: 5rem;
     overflow: hidden;
     position: relative;
-    height: 82vh;
-    padding-top: 12rem;
-
+    height: max-content;
+    background-color: #0aa0d0;
+    width: 100%;
 
 }
 
 .mediumTwitter {
-    flex-direction: row;
     display: flex;
+    margin: auto;
     gap: 2rem;
+
 }
 
 .mediumblogs p {
@@ -426,25 +408,24 @@ p.line {
     margin-top: 1rem;
 }
 
-#contact .background2 {
-    background-color: #2aabe2;
-    /* width: 90rem; */
-    width: 110%;
-    height: 35rem;
-    position: absolute;
-    z-index: -1;
-    transform: rotate(-5deg);
-    left: -2rem;
-    bottom: -5rem;
 
-    /* top: 0; */
-}
 
 .last {
     width: max-content;
     margin: auto;
     color: white;
     margin-top: 3rem;
+}
+
+.background2 {
+    position: absolute;
+    border-width: 0 0 100px 100vw;
+    /*top left bottom right*/
+    top: 0;
+    left: 0;
+    border-color: transparent transparent transparent white;
+    border-style: solid;
+
 }
 
 /* research #777777 */
