--- a/clearstream.css
+++ b/clearstream.css
@@ -1,7 +1,10 @@
 .background {
-    background-color: #bee5ea;
+    background-color: white;
 }
 
+header {
+    background-color: #bee5ea;
+}
 
 .mallshots {
     grid-template-columns: repeat(6, 1fr);
@@ -30,7 +33,10 @@
 .camph1 {
     background-color: #d8e0f3;
     padding: 5rem 1.5rem;
+    width: 100vw;
 }
+
+
 
 .camph1 h1 {
     width: max-content;
@@ -42,6 +48,7 @@
 
 .campaign {
     width: 100vw;
+    margin: auto;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     height: max-content;
@@ -77,4 +84,5 @@
 
 .contribution {
     background-color: #bee5ea;
+    margin-top: 5rem;
 }
