--- a/style.css
+++ b/style.css
@@ -527,7 +527,8 @@ p.line {
 .sec {
     height: 2px;
     width: 44%;
-    background-color: #fd: 2;
+    background-color: #fdcf19;
+    z-index: 2;
 }
 
 .sec::before {
@@ -551,7 +552,8 @@ p.line {
     border-radius: 50%;
     height: 1.8rem;
     background-color: #fdcf19;
-    border: 4px solid #f3: 0;
+    border: 4px solid #f3f3f3;
+
 }
 
 .clockcirc p {
