--- a/style.css
+++ b/style.css
@@ -4,7 +4,47 @@
     box-sizing: border-box;
 }
 
+.tyScroll {
+    background-color: #4239c8;
+    background-color: rgba(255, 250, 250, 0.7);
+    width: 100vw;
+    height: 4rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    border-bottom: 0.5px solid rgba(0, 0, 0, 0.8);
+}
 
+.headScroll a {
+    color: #0aa0d0;
+    text-decoration: none;
+    font-size: 0.8rem;
+}
+
+.tyScroll img {
+    width: 1rem;
+    height: 1rem;
+}
+
+.tyScroll .triangle {
+    border-bottom: 1rem solid #0aa0d0;
+}
+
+.tyScroll .triangle p {
+    border-bottom: 0.73rem solid white;
+    top: 3.3px;
+    right: -9px;
+}
+
+.headScroll {
+    display: flex;
+    height: max-content;
+    width: 100%;
+    max-width: 88rem;
+    justify-content: space-between;
+    padding: 0rem 10rem;
+}
 
 main {
     width: 88rem;
@@ -78,7 +118,7 @@ header img {
     /* border-radius: 4px; */
     position: absolute;
     top: 2px;
-    right: -9px;
+    right: -8.5px;
 }
 
 .head a {
@@ -102,12 +142,6 @@ header img {
     padding: 2rem 0rem;
     height: max-content;
 
-}
-
-.ty2 {
-    /* display: none; */
-    background-color: blue;
-    /* width: 100vw; */
 }
 
 .email,
