--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@
     justify-content: center;
     align-items: center;
     position: fixed;
-    border-bottom: 0.5px solid rgba(0, 0, 0, 0.8);
+    border-bottom: 0.5px solid rgba(82, 79, 79, 0.5);
+    z-index: 2;
 }
 
 .headScroll a {
@@ -75,6 +76,7 @@ header {
     position: relative;
     padding-bottom: 10rem;
     width: 100vw;
+    z-index: 3;
 
 }
 
