--- a/codepen.css
+++ b/codepen.css
@@ -16,6 +16,10 @@ body {
     width: 100%;
 }
 
+.svgwhite {
+    width: 3rem;
+}
+
 main {
     overflow-y: auto;
     width: 100%;
@@ -27,7 +31,6 @@ main {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    /* background-color: red; */
     padding: 0rem 10rem;
     width: 88rem;
     margin: auto;
@@ -39,34 +42,6 @@ header {
     background-color: rgba(255, 255, 255, 0.7);
     display: flex;
 
-}
-
-.triangle {
-    width: max-content;
-    border-right: 0.8rem solid transparent;
-    border-left: 0.8rem solid transparent;
-    border-bottom: 1rem solid #0aa0d0;
-    /* border-radius: 4px; */
-    position: relative;
-}
-
-.triangle p {
-    border-right: 0.55rem solid transparent;
-    border-left: 0.55rem solid transparent;
-    border-bottom: 0.73rem solid white;
-    /* border-radius: 4px; */
-    position: absolute;
-    top: 2px;
-    right: -9px;
-}
-
-.signs {
-    display: flex;
-}
-
-.signs img {
-    width: 1rem;
-    height: 1rem;
 }
 
 .navlinks a {
