--- a/style.css
+++ b/style.css
@@ -31,11 +31,6 @@
     font-size: 0.8rem;
 }
 
-.tyScroll img {
-    width: 1rem;
-    height: 1rem;
-}
-
 .tyScroll .triangle {
     border-bottom: 1rem solid #0aa0d0;
 }
@@ -52,7 +47,8 @@
     width: 100%;
     max-width: 88rem;
     justify-content: space-between;
-    padding: 0rem 10rem;
+    padding-left: 10rem;
+    padding-right: 10rem;
 }
 
 main {
