--- a/style.css
+++ b/style.css
@@ -2,6 +2,28 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    --bb: red;
+}
+
+.heroes {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    /* background-color: red; */
+    margin-left: -10rem;
+    backface-visibility: hidden;
+    transform-style: preserve-3d;
+}
+
+.heroes img {
+    position: relative;
+    backface-visibility: hidden;
+    transform-style: preserve-3d;
+    top: 0;
+    left: 0;
+    transform: translate(calc*var(--transvalue)rem);
+    width: 3rem;
+
 }
 
 .svgwhite {
@@ -71,7 +93,8 @@ body {
 }
 
 header {
-    background-color: #4239c8;
+    /* background-color: #4239c8; */
+    background: linear-gradient(to bottom right, #4F00BC 10%, #29ABE2 100%);
     height: max-content;
     color: white;
     display: flex;
