--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
     z-index: -1;
     background: linear-gradient(to bottom right, #4F00BC 10%, #29ABE2 100%);
     overflow: hidden;
-
+    transition: all linear 0.5s;
 
 }
 
@@ -31,7 +31,7 @@
 .img3,
 .img1,
 .img2 {
-    opacity: 0.6;
+    opacity: 0.4;
     width: 3.5rem;
 
 }
@@ -40,7 +40,7 @@
 .img11,
 .img22 {
     width: 2.7rem;
-    opacity: 0.2;
+    opacity: 0.1;
 }
 
 .svgwhite {
