--- a/style.css
+++ b/style.css
@@ -52,20 +52,20 @@
 }
 
 .tyScroll {
-    background-color: #4239c8;
-    background-color: rgba(255, 250, 250, 0.7);
+    /* background-color: rgba(255, 250, 250, 0.7); */
+    background-color: transparent;
     width: 100vw;
     height: 4rem;
     display: flex;
     justify-content: center;
     align-items: center;
     position: fixed;
-    border-bottom: 0.5px solid rgba(82, 79, 79, 0.5);
-    z-index: 2;
+    /* border-bottom: 0.5px solid rgba(82, 79, 79, 0.5); */
+    z-index: 3;
 }
 
 .headScroll a {
-    color: #0aa0d0;
+    /* color: #0aa0d0; */
     text-decoration: none;
     font-size: 0.8rem;
 }
@@ -122,9 +122,9 @@ header {
 }
 
 
-.zindexheader {
+/* .zindexheader {
     z-index: 3;
-}
+} */
 
 
 .background {
